Finalizado el navbar version desktop

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -70,7 +70,19 @@
         </nav>
 
         <div class="header__profile profile">
-
+          <a class="profile__a" href="https://twitter.com/gabodevarg">
+            <img class="profile__img" src="../assets/img/img-profile.webp" alt="Imagen de perfil de @gabodevar">
+            <div class="profile__users">
+              <span class="profile__span profile__span--primary">Gonzalo Ramirez</span>
+              <span class="profile__span">@gabodevar</span>
+            </div>
+            <svg class="profile__icon" viewBox="0 0 24 24" aria-hidden="true" class="r-18jsvk2 r-4qtqp9 r-yyyyoo r-1xvli5t r-dnmrzs r-bnwqim r-1plcrui r-lrvibr">
+              <g>
+                <path d="M3 12c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm9 2c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm7 0c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z">
+                </path>
+              </g>
+            </svg>
+          </a>
         </div>
       </div>
     </header>
