--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,7 +8,7 @@
     <!-- Font Style -->
     <link href="https://fonts.cdnfonts.com/css/chirp-2" rel="stylesheet">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <div class="header__wrapper">
         <div class="header__logo">
@@ -87,9 +87,9 @@
     </header>
 
     <div class="cover" id="modalCover"></div>
-    
-    <div class="modal">
-      <div class="modal__header">
+
+    <div class="modal" id="modal">
+      <div class="modal__header" id="modalHeader">
         <div class="modal__close" id="modalClose">
           <svg class="modal__xmark" viewBox="0 0 24 24" aria-hidden="true"><g><path d="M10.59 12L4.54 5.96l1.42-1.42L12 10.59l6.04-6.05 1.42 1.42L13.41 12l6.05 6.04-1.42 1.42L12 13.41l-6.04 6.05-1.42-1.42L10.59 12z"></path></g></svg>
         </div>
@@ -106,7 +106,7 @@
             <svg class="modal__arrow" viewBox="0 0 24 24" aria-hidden="true"><g><path d="M3.543 8.96l1.414-1.42L12 14.59l7.043-7.05 1.414 1.42L12 17.41 3.543 8.96z"></path></g></svg>
           </span>
 
-          <textarea class="modal__input" name="tweet" id="input-tweet" placeholder="¿Qué está pasando?" wrap="soft"></textarea>
+          <textarea class="modal__input" name="tweet" id="inputTweet" placeholder="¿Qué está pasando?" wrap="soft"></textarea>
 
           <span class="modal__span">
             <svg class="modal__world" viewBox="0 0 24 24" aria-hidden="true"><g><path d="M12 1.75C6.34 1.75 1.75 6.34 1.75 12S6.34 22.25 12 22.25 22.25 17.66 22.25 12 17.66 1.75 12 1.75zm-.25 10.48L10.5 17.5l-2-1.5v-3.5L7.5 9 5.03 7.59c1.42-2.24 3.89-3.75 6.72-3.84L11 6l-2 .5L8.5 9l5 1.5-1.75 1.73zM17 14v-3l-1.5-3 2.88-1.23c1.17 1.42 1.87 3.24 1.87 5.23 0 1.3-.3 2.52-.83 3.61L17 14z"></path></g></svg>
@@ -127,15 +127,22 @@
           </ul>
 
           <div class="modal__actions">
-            <div class="modal__spinner">
 
+            <div class="modal__progresscircle">
+              <svg class="modal__spinner">
+                <circle class="modal__circle" r="12" cx="50%" cy="50%" pathlength="100"></circle>
+                <circle class="modal__circle" id="modalCircleCheck" r="12" cx="50%" cy="50%" pathlength="100"></circle>
+              </svg>
+
+              <span class="modal__warning" id="modalWarning"></span>
             </div>
+            
 
             <span class="modal__addtweet">
               <svg class="modal__add" viewBox="0 0 24 24" aria-hidden="true"><g><path d="M11 11V4h2v7h7v2h-7v7h-2v-7H4v-2h7z"></path></g></svg>
             </span>
 
-            <button class="modal__twettear">
+            <button class="modal__twettear" type="submit" id="modalButton" disabled>
               Twittear
             </button>
           </div>
