Avances sobre el componente spinner progress

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -70,7 +70,7 @@
 
         <div class="header__profile profile">
           <a class="profile__a" href="https://twitter.com/gabodevarg">
-            <img class="profile__img" src="../assets/img/img-profile.webp" alt="Imagen de perfil de @gabodevar">
+            <img class="profile__img" src="./assets/img/img-profile.webp" alt="Imagen de perfil de @gabodevar">
             <div class="profile__users">
               <span class="profile__span profile__span--primary">Gonzalo Ramirez</span>
               <span class="profile__span">@gabodevar</span>
@@ -97,7 +97,7 @@
 
       <div class="modal__main">
         <div class="modal__profile">
-          <img class="modal__img" src="../assets//img/img-julio-borges.webp" alt="Imagen de perfil del Maestro Julio Luis Borges">
+          <img class="modal__img" src="./assets//img/img-julio-borges.webp" alt="Imagen de perfil del Maestro Julio Luis Borges">
         </div>
 
         <div class="modal__wrapper">
