Fuente Chirp agregada, estandarizacion de medidas rem, configuraciones nuevas para webpack asset/modules

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter Clone</title>
     <!-- Font Style -->
-    <link href="https://fonts.cdnfonts.com/css/chirp-2" rel="stylesheet">
+    <!-- <link href="https://fonts.cdnfonts.com/css/chirp-2" rel="stylesheet"> -->
   </head>
   <body class="body">
     <header class="header">
@@ -70,10 +70,10 @@
 
         <div class="header__profile profile">
           <a class="profile__a" href="https://twitter.com/gabodevarg">
-            <img class="profile__img" src="./assets/img/img-profile.webp" alt="Imagen de perfil de @gabodevar">
+            <img class="profile__img" src="./assets/images/img-profile.webp" alt="Imagen de perfil de @gabodevar">
             <div class="profile__users">
               <span class="profile__span profile__span--primary">Gonzalo Ramirez</span>
-              <span class="profile__span">@gabodevar</span>
+              <span class="profile__span">@gabodevarg</span>
             </div>
             <svg class="profile__icon" viewBox="0 0 24 24" aria-hidden="true">
               <g>
@@ -97,7 +97,7 @@
 
       <div class="modal__main">
         <div class="modal__profile">
-          <img class="modal__img" src="./assets//img/img-julio-borges.webp" alt="Imagen de perfil del Maestro Julio Luis Borges">
+          <img class="modal__img" src="assets/images/julio-borges.webp" alt="Imagen de perfil del Maestro Julio Luis Borges">
         </div>
 
         <div class="modal__wrapper">
@@ -106,8 +106,9 @@
             <svg class="modal__arrow" viewBox="0 0 24 24" aria-hidden="true"><g><path d="M3.543 8.96l1.414-1.42L12 14.59l7.043-7.05 1.414 1.42L12 17.41 3.543 8.96z"></path></g></svg>
           </span>
 
-          <textarea class="modal__input" name="tweet" id="inputTweet" placeholder="¿Qué está pasando?" wrap="soft"></textarea>
-
+          <textarea class="modal__input" name="tweet" id="inputTweet" placeholder="¿Qué está pasando?" wrap="soft">
+          </textarea>
+          
           <span class="modal__span">
             <svg class="modal__world" viewBox="0 0 24 24" aria-hidden="true"><g><path d="M12 1.75C6.34 1.75 1.75 6.34 1.75 12S6.34 22.25 12 22.25 22.25 17.66 22.25 12 17.66 1.75 12 1.75zm-.25 10.48L10.5 17.5l-2-1.5v-3.5L7.5 9 5.03 7.59c1.42-2.24 3.89-3.75 6.72-3.84L11 6l-2 .5L8.5 9l5 1.5-1.75 1.73zM17 14v-3l-1.5-3 2.88-1.23c1.17 1.42 1.87 3.24 1.87 5.23 0 1.3-.3 2.52-.83 3.61L17 14z"></path></g></svg>
             Cualquier persona puede responder
